Configure Jest custom matchers

--- a/.eslintrc
+++ b/.eslintrc
@@ -1,4 +1,6 @@
 {
 	"extends": ["@imaginelearning/eslint-config/base"],
-	"rules": {}
+	"rules": {
+		"@typescript-eslint/no-var-requires": "off"
+	}
 }
