--- a/package.json
+++ b/package.json
@@ -25,7 +25,11 @@
 		"@imaginelearning/eslint-config": "^0.1.1",
 		"@imaginelearning/prettier-config": "^0.1.1",
 		"@storybook/react": "^6.2.8",
+		"@testing-library/jest-dom": "^5.11.10",
 		"@testing-library/react": "^11.2.6",
+		"@types/jest": "^26.0.22",
+		"@types/jest-axe": "^3.5.1",
+		"@types/testing-library__jest-dom": "^5.9.5",
 		"@typescript-eslint/eslint-plugin": "^4.22.0",
 		"@typescript-eslint/parser": "^4.22.0",
 		"babel-eslint": "^10.1.0",
@@ -40,10 +44,12 @@
 		"lint-staged": "^10.5.4",
 		"prettier": "^2.2.1",
 		"pretty-quick": "^3.1.0",
-		"react": "^17.0.2"
+		"react": "^17.0.2",
+		"typescript": "^4.2.4"
 	},
 	"peerDependencies": {
 		"@storybook/react": ">=6",
+		"@testing-library/jest-dom": ">=5",
 		"@testing-library/react": ">=11",
 		"jest": ">=26",
 		"jest-axe": ">=4",
